--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,6 @@
               <div class="slider-text">OverallQual</div>
             <div class="aria-widget-slider">
             <div class="rail-label min">0</div>
-                <div class="rail-label max">10</div>
             <div class="rail" style="width: 160px;">
             <img id="minOverallQual"
                 src="../static/min-arrow.png"
@@ -45,15 +44,15 @@
             aria-valuenow="10"
             aria-valuemax="10">
             </div>
-
+                <div class="rail-label max">10</div>
             </div>
           </div>
 
           <div class="slider-component">
               <div class="slider-text">SalePrice</div>
             <div class="aria-widget-slider">
-            <div class="rail-label min">0</div>
-                <div class="rail-label max">10</div>
+            <div class="rail-label min">100</div>
+
             <div class="rail" style="width: 160px;">
     <img id="minOverallQual"
          src="../static/min-arrow.png"
@@ -72,13 +71,14 @@
          aria-valuenow="500000"
          aria-valuemax="500000">
   </div>
+                <div class="rail-label max">5678</div>
             </div>
         </div>
           <div class="slider-component">
               <div class="slider-text">Lot Area</div>
             <div class="aria-widget-slider">
             <div class="rail-label min">0</div>
-                <div class="rail-label max">10</div>
+
             <div class="rail" style="width: 160px;">
             <img id="minLotArea"
                 src="../static/min-arrow.png"
@@ -97,13 +97,14 @@
             aria-valuenow="115149"
             aria-valuemax="115149">
             </div>
+                <div class="rail-label max">10</div>
             </div>
           </div>
           <div class="slider-component">
               <div class="slider-text">Garage Area</div>
             <div class="aria-widget-slider">
             <div class="rail-label min">0</div>
-                 <div class="rail-label max">115149</div>
+
             <div class="rail" style="width: 160px;">
             <img id="minLotArea"
                 src="../static/min-arrow.png"
@@ -122,6 +123,7 @@
             aria-valuenow="115149"
             aria-valuemax="115149">
             </div>
+                <div class="rail-label max">115149</div>
 
             </div>
           </div>
@@ -129,7 +131,6 @@
            <div class="slider-text">GrLiv Area</div>
             <div class="aria-widget-slider">
             <div class="rail-label min">0</div>
-                <div class="rail-label max">115149</div>
             <div class="rail" style="width: 160px;">
             <img id="minLotArea"
                 src="../static/min-arrow.png"
@@ -148,6 +149,7 @@
             aria-valuenow="115149"
             aria-valuemax="115149">
             </div>
+                <div class="rail-label max">115149</div>
 
             </div>
           </div>
@@ -155,7 +157,7 @@
              <div class="slider-text">GrLiv Area</div>
             <div class="aria-widget-slider">
             <div class="rail-label min">0</div>
-                <div class="rail-label max">115149</div>
+
             <div class="rail" style="width: 160px;">
             <img id="minLotArea"
                 src="../static/min-arrow.png"
@@ -174,10 +176,12 @@
             aria-valuenow="115149"
             aria-valuemax="115149">
             </div>
+                 <div class="rail-label max">115149</div>
 
             </div>
           </div>
       </div>
+
       <div class="graph-class-top">
           <div class="graph-class-left">
               <div id="dcm-div" class="dcm-class"></div>
@@ -191,11 +195,10 @@
               <div id="parallel-div" class="parallel-class"></div>
       </div>
 
-      ////
-      <div width="50%">
+      <div class="table-class">
 		  <div class="table-text" style="display:inline-block;">
 		  <div id="displaytable" class="placeholder" >
-  <table style="color:#e5e5e5" id="displaytable2" cellpadding="1" cellspacing="0" border="3">
+  <table style="color:#e5e5e5" id="displaytable2" cellpadding="1" cellspacing="0" border="3" width="80%" height="100%">
     <tr align="center">
       <td class="lbl">Total Houses </td>
     </tr>
