--- a/static/multithumb-slider.css
+++ b/static/multithumb-slider.css
@@ -18,6 +18,7 @@ div.rail-label.max {
   padding-left: 0.5em;
   float: right;
   text-align: right;
+  margin-top: -25px;
 }
 
 div.rail-label.min {
