--- a/templates/index.html
+++ b/templates/index.html
@@ -196,35 +196,29 @@
       </div>
 
       <div class="table-class">
-		  <div class="table-text" style="display:inline-block;">
-		  <div id="displaytable" class="placeholder" >
-  <table style="color:#e5e5e5" id="displaytable2" cellpadding="1" cellspacing="0" border="3" width="80%" height="100%">
-    <tr align="center">
-      <td class="lbl">Total Houses </td>
-    </tr>
-     </table>
-</div>
+          <div class="table-left">
+                      <table class="table-left-top">
+            <tr align="center">
+            <td class="lbl">Total Houses </td>
+            </tr>
+        </table>
 
-<div id="displaytable" class="placeholder" >
-  <table style="color:#e5e5e5" id="displaytable2" cellpadding="1" cellspacing="0" border="3">
-    <tr align="center">
-      <td class="lbl">243 </td>
-    </tr>
-     </table>
-</div>
-		  </div>
+                <table class="table-left-bottom">
+            <tr align="center">
+            <td class="lbl">243 </td>
+            </tr>
+        </table>
 
-		  <div style="display:inline-block;">
-      <div id="displaytable" class="placeholder"  >
-  <table style="color:#e5e5e5" id="displaytable2"  cellpadding="1" cellspacing="0" border="3">
-    <tr align="center">
-      <td class="lbl">Top Houses acc to your preferences</td>
-    </tr>
-     </table>
-</div>
+          </div>
 
-<div id="displaytable" class="placeholder">
-  <table style="color:#e5e5e5" id="displaytable2" cellpadding="1" cellspacing="0" border="3">
+
+		  <div class="table-right">
+            <table class="table-right-top">
+            <tr align="center">
+            <td class="lbl">Top Houses acc to your preferences</td>
+            </tr>
+        </table>
+            <table class="table-right-bottom">
     <tr align="center">
       <td class="lbl">SalePrice</td>
       <td class="lbl">Quality</td>
@@ -246,7 +240,7 @@
 	  <td align="center">9</td>
     </tr>
   </table>
-</div>
+        </div>
 
 </div>
 </div>
