--- a/templates/index.html
+++ b/templates/index.html
@@ -247,7 +247,7 @@
 
       <script type="text/javascript">
 		  var textColor = "#e5e5e5";
-		  var scoreFeatures = [];
+		  var scoreFeatures = ['SalePrice'];
           drawInitialParallelGraph();
           bubble_test();
           drawMDSscatter("euclidean");
