Adding all slider

--- a/templates/index.html
+++ b/templates/index.html
@@ -59,19 +59,19 @@
          role="slider"
          tabindex="0"
          class="min thumb"
-         aria-valuemin="1"
-         aria-valuenow="1"
-         aria-valuemax="500000">
+         aria-valuemin="30000"
+         aria-valuenow="30000"
+         aria-valuemax="800000">
     <img id="maxOverallQual"
          src="../static/max-arrow.png"
          role="slider"
          tabindex="0"
          class="max thumb"
-         aria-valuemin="1"
-         aria-valuenow="500000"
-         aria-valuemax="500000">
+         aria-valuemin="30000"
+         aria-valuenow="800000"
+         aria-valuemax="800000">
   </div>
-                <div class="rail-label max">5678</div>
+                <div class="rail-label max">800000</div>
             </div>
         </div>
           <div class="slider-component">
@@ -85,19 +85,19 @@
                 role="slider"
                 tabindex="0"
                 class="min thumb"
-                aria-valuemin="1300"
-                aria-valuenow="1300"
-                aria-valuemax="115149">
+                aria-valuemin="1000"
+                aria-valuenow="1000"
+                aria-valuemax="50000">
             <img id="maxLotArea"
             src="../static/max-arrow.png"
             role="slider"
             tabindex="0"
             class="max thumb"
-            aria-valuemin="1300"
-            aria-valuenow="115149"
-            aria-valuemax="115149">
+            aria-valuemin="1000"
+            aria-valuenow="50000"
+            aria-valuemax="50000">
             </div>
-                <div class="rail-label max">10</div>
+                <div class="rail-label max">50000</div>
             </div>
           </div>
           <div class="slider-component">
@@ -111,24 +111,24 @@
                 role="slider"
                 tabindex="0"
                 class="min thumb"
-                aria-valuemin="1300"
-                aria-valuenow="1300"
-                aria-valuemax="115149">
+                aria-valuemin="0"
+                aria-valuenow="0"
+                aria-valuemax="1500">
             <img id="maxLotArea"
             src="../static/max-arrow.png"
             role="slider"
             tabindex="0"
             class="max thumb"
-            aria-valuemin="1300"
-            aria-valuenow="115149"
-            aria-valuemax="115149">
+            aria-valuemin="0"
+            aria-valuenow="1500"
+            aria-valuemax="1500">
             </div>
-                <div class="rail-label max">115149</div>
+                <div class="rail-label max">1500</div>
 
             </div>
           </div>
           <div class="slider-component">
-           <div class="slider-text">GrLiv Area</div>
+           <div class="slider-text">KitchenQual</div>
             <div class="aria-widget-slider">
             <div class="rail-label min">0</div>
             <div class="rail" style="width: 160px;">
@@ -137,24 +137,24 @@
                 role="slider"
                 tabindex="0"
                 class="min thumb"
-                aria-valuemin="1300"
-                aria-valuenow="1300"
-                aria-valuemax="115149">
+                aria-valuemin="1"
+                aria-valuenow="1"
+                aria-valuemax="5">
             <img id="maxLotArea"
             src="../static/max-arrow.png"
             role="slider"
             tabindex="0"
             class="max thumb"
-            aria-valuemin="1300"
-            aria-valuenow="115149"
-            aria-valuemax="115149">
+            aria-valuemin="1"
+            aria-valuenow="5"
+            aria-valuemax="5">
             </div>
-                <div class="rail-label max">115149</div>
+                <div class="rail-label max">5</div>
 
             </div>
           </div>
           <div class="slider-component">
-             <div class="slider-text">GrLiv Area</div>
+             <div class="slider-text">YrSold</div>
             <div class="aria-widget-slider">
             <div class="rail-label min">0</div>
 
@@ -164,19 +164,19 @@
                 role="slider"
                 tabindex="0"
                 class="min thumb"
-                aria-valuemin="1300"
-                aria-valuenow="1300"
-                aria-valuemax="115149">
+                aria-valuemin="2006"
+                aria-valuenow="2006"
+                aria-valuemax="2010">
             <img id="maxLotArea"
             src="../static/max-arrow.png"
             role="slider"
             tabindex="0"
             class="max thumb"
-            aria-valuemin="1300"
-            aria-valuenow="115149"
-            aria-valuemax="115149">
+            aria-valuemin="2006"
+            aria-valuenow="2010"
+            aria-valuemax="2010">
             </div>
-                 <div class="rail-label max">115149</div>
+                 <div class="rail-label max">2010</div>
 
             </div>
           </div>
