--- a/templates/index.html
+++ b/templates/index.html
@@ -205,7 +205,7 @@
 
                 <table class="table-left-bottom">
             <tr align="center">
-            <td class="lbl">243 </td>
+            <td class="lbl-number">243 </td>
             </tr>
         </table>
 
