adding slider button for score

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,8 @@
       <h1 class = "retroshadow"> Ames Housing Dataset</h1>
       <div class="slider">
           <div class="slider-component">
-              <div class="slider-text">OverallQual</div>
+              <div class="slider-text"><button onclick="myFunction('btn-OverallQual')" id="btn-OverallQual"
+                                               style="background:teal;">OverallQual</button></div>
             <div class="aria-widget-slider">
             <div class="rail-label min">0</div>
             <div class="rail" style="width: 160px;">
@@ -49,7 +50,8 @@
           </div>
 
           <div class="slider-component">
-              <div class="slider-text">SalePrice</div>
+              <div class="slider-text"><button onclick="myFunction('btn-SalePrice')" id="btn-SalePrice"
+                                               style="background:teal;">SalePrice</button></div>
             <div class="aria-widget-slider">
             <div class="rail-label min">100</div>
 
@@ -75,7 +77,8 @@
             </div>
         </div>
           <div class="slider-component">
-              <div class="slider-text">Lot Area</div>
+                            <div class="slider-text"><button onclick="myFunction('btn-LotArea')" id="btn-LotArea"
+                                               style="background:teal;">Lot Area</button></div>
             <div class="aria-widget-slider">
             <div class="rail-label min">0</div>
 
@@ -101,7 +104,8 @@
             </div>
           </div>
           <div class="slider-component">
-              <div class="slider-text">Garage Area</div>
+              <div class="slider-text"><button onclick="myFunction('btn-GarageArea')" id="btn-GarageArea"
+                                               style="background:teal;">Garage Area</button></div>
             <div class="aria-widget-slider">
             <div class="rail-label min">0</div>
 
@@ -128,7 +132,8 @@
             </div>
           </div>
           <div class="slider-component">
-           <div class="slider-text">KitchenQual</div>
+              <div class="slider-text"><button onclick="myFunction('btn-KitchenQual')" id="btn-KitchenQual"
+                                               style="background:teal;">KitchenQual</button></div>
             <div class="aria-widget-slider">
             <div class="rail-label min">0</div>
             <div class="rail" style="width: 160px;">
@@ -154,7 +159,8 @@
             </div>
           </div>
           <div class="slider-component">
-             <div class="slider-text">YrSold</div>
+              <div class="slider-text"><button onclick="myFunction('btn-YrSold')" id="btn-YrSold"
+                                               style="background:teal;">YrSold</button></div>
             <div class="aria-widget-slider">
             <div class="rail-label min">0</div>
 
@@ -225,19 +231,19 @@
 	  <td class="lbl">Neighborhood</td>
     </tr>
     <tr>
-      <td align="center">1</td>
-      <td align="center">2</td>
-	  <td align="center">3</td>
+      <td align="center" id="1">1</td>
+      <td align="center" id="2">2</td>
+	  <td align="center" id="3">3</td>
     </tr>
     <tr>
-      <td align="center">4</td>
-      <td align="center">5</td>
-	  <td align="center">6</td>
+      <td align="center" id="4">4</td>
+      <td align="center" id="5">5</td>
+	  <td align="center" id="6">6</td>
     </tr>
 	<tr>
-      <td align="center">7</td>
-      <td align="center">8</td>
-	  <td align="center">9</td>
+      <td align="center" id="7">7</td>
+      <td align="center" id="8">8</td>
+	  <td align="center" id="9">9</td>
     </tr>
   </table>
         </div>
@@ -247,11 +253,12 @@
 
       <script type="text/javascript">
 		  var textColor = "#e5e5e5";
-		  var scoreFeatures = ['SalePrice'];
+		  var scoreFeatures = [];
           drawInitialParallelGraph();
           bubble_test();
           drawMDSscatter("euclidean");
           drawInitialLineGraph();
+          addData();
       </script>
    </body>
 </html>
