--- a/templates/index.html
+++ b/templates/index.html
@@ -190,14 +190,18 @@
 
       <div class="graph-class-top">
           <div class="graph-class-left">
+              <div class="dcm-name">Data Context Map</div>
               <div id="dcm-div" class="dcm-class"></div>
           </div>
           <div class="graph-class-right">
+              <div class="linegraph-name">Line Plot</div>
                <div id="line-div" class="line-class"></div>
+              <div class="bubble-name">Neighborhood Plot</div>
                 <div id="bubble-div" class="bubble-class"></div>
           </div>
       </div>
       <div class="graph-class-bottom">
+                <div class="pc-name">Parallel Coordinates</div>
               <div id="parallel-div" class="parallel-class"></div>
       </div>
 
